@@ -4,7 +4,8 @@ Release History
 1.4 (unreleased)
 ================
 
-- Nothing changed yet.
+- Remove the build directory for a shared build when the source cannot be
+  downloaded.
 
 
 1.3.1 (2009-09-10)
